--- a/maven/simple-war/pom.xml
+++ b/maven/simple-war/pom.xml
@@ -23,6 +23,20 @@
 				<artifactId>maven-war-plugin</artifactId>
 				<version>2.1.1</version>
 			</plugin>
+			 <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                    <url>http://15.207.100.182:8080/manager/text</url>
+                    <server>tomcat</server>
+                    <username>manager</username>
+                    <password>password</password>
+                    <path>/calculator</path>
+                    <update>true</update>
+                </configuration>
+            </plugin>
+			
 		</plugins>
 	</build>
 
